@@ -19,6 +19,7 @@ bulk.h \
 constltp.h \
 constltp_ann.h \
 constltp_axw.h \
+constltp_dcw.h \
 constltp_impl.cc \
 constltp_impl.h \
 constltp_nlp.cc \
